--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <!--Footer-->
 <footer>
-    <p class="footer-text">Made by Wantyaa@2025</p>
+    <p class="footer-text">Made by Wantya@2025</p>
 </footer>
 
 <!--Memasukan script Java-->
